--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
+<!doctype html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>CAPTCHA GAME</title>
     <script type="text/javascript" src="http://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
     <script src="jquery_form.js" type="text/javascript"></script>
     <script src="captchagame.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
+    <h1>raptureCAPTCHA</h1>
+    <input id="start" type="button" value="start" />
     <form action="verify" method="POST" id="captchagame-form">
+      <progress id="timebar" max="20"></progress>
       <div id="captcha"></div>
       <!--
       <script type="text/javascript"
@@ -22,7 +28,6 @@
                value="manual_challenge">
       </noscript>
       -->
-      <input type="submit" value="OK" />
     </form>
   </body>
 </html>
